--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <parallel.tests>4</parallel.tests>
-        <webdriver.driver>firefox</webdriver.driver>
+        <webdriver.driver>geckodriver</webdriver.driver>
     </properties>
 
     <dependencies>
